Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -147,14 +147,14 @@ It should be noted that for massless particles, helicity is Lorentz invariant an
 
 The weak force is mediated by the charged $W^\pm$ and neutral $Z^0$ bosons and is responsible for radioactive decay. It is dubbed \textit{weak} because if the strong or \gls{em} forces are also present the weak force is usually subdominant. The active neutrinos only interact via the weak force (and gravity) which is one of the reasons they have been historically difficult to detect. 
 
-It was shown experimentally by Wu that \gls{p} conservation is violated and later by Cronin and Fitch that \gls{cp} conservation is also violated \cite{Wu_experiment}\cite{Cronin_and_Fitch_experiment}. \gls{cp} violation is one of the Sakharov conditions required to have a matter-antimatter asymmetry in the universe, however, the amount of \gls{cp} violation seen in the quark sector is seemingly insufficient to explain the matter dominated universe we observe \cite{Sakharov_conditions}. There may also be \gls{cp} violation from the \gls{pmns} matrix in the lepton sector which could help explain the matter-antimatter asymmetry. However, the amount of \gls{cp} violation in the lepton sector, if any, is currently unknown \cite{leptonic_cp_violation}.  
+It was shown experimentally by Wu that \gls{p} conservation is violated and later by Cronin and Fitch that \gls{cp} conservation is also violated \cite{Wu_experiment}\cite{Cronin_and_Fitch_experiment}. \gls{cp} violation is one of the Sakharov conditions required to have a matter-antimatter asymmetry in the universe, however, the amount of \gls{cp} violation seen in the quark sector is seemingly insufficient to explain the matter dominated universe that is  observe \cite{Sakharov_conditions}. There may also be \gls{cp} violation from the \gls{pmns} matrix in the lepton sector which could help explain the matter-antimatter asymmetry. However, the amount of \gls{cp} violation in the lepton sector, if any, is currently unknown \cite{leptonic_cp_violation}.  
 
 The weak charged current, $j^{CC}_{weak}$ may be expressed as, 
 \begin{equation}\label{eqn:weak current}
     j^{CC}_{weak} = \frac{g_w}{\sqrt{2}}\Bar{\psi}\gamma^{\mu}\frac{1}{2}(1-\gamma^5)\psi,
 \end{equation}
 where $g_w$ is the coupling factor \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}.
-This has the form of a vector-axial (V-A) interaction, where the vector current is given by $\Bar{\psi}\gamma^\mu\psi$ and the axial current is given by $\Bar{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. We are usually interested in the square of the amplitude, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term leads to parity violation \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
+This has the form of a vector-axial (V-A) interaction, where the vector current is given by $\Bar{\psi}\gamma^\mu\psi$ and the axial current is given by $\Bar{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. Usually the square of the amplitude is of interest, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term leads to parity violation \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 Because the projection operator, $P_L$, appears in \EquationRef{eqn:weak current} it follows that weak interactions only apply to left-handed particles (and right-handed antiparticles). Neutrinos only interact via the weak force which means they are therefore produced with a left-handed chirality and since they are ultra-relativistic, for all intents and purposes they also have a left-handed helicity \cite{Quarks_and_Leptons:_An_Introductor_Course_in_Modern_Particle_Physics_book}. 
 
@@ -187,7 +187,7 @@ Finally, only electron neutrinos may interact via \gls{cc},
 therefore this channel only measured the flux of \nue. Confirmation that the flux of \nue was less than the flux from the \gls{nc} or \gls{es} channels coupled with the fact that the \nue flux was in agreement with previous solar neutrino experiments was sufficient to resolve the solar neutrino problem \cite{SNO_solar_neutrinos}.
 
 
-Neutrino oscillations is one of the key topics in the field and this thesis. In the remainder of this section we will discuss the theory of neutrino oscillations. The three flavour states (\nue, \numu, \nutau) have already been established, but with the confirmation of neutrino oscillations, the three corresponding mass states (\nuone, \nutwo, \nuthree) are required to be distinct from the flavour states. The flavour eigenstate of a neutrino is what is observed, however each flavour state is a superposition of the three mass states. As a neutrino propagates, the mass states propagate at different rates and thus the relative phase between the states is continuously changing. When a neutrino then interacts, it will have a certain set of mass states which correspond to a superposition of the flavour states. The flavour superposition will then collapse into a single flavour and this is what is then detected. This is the mechanism which allows neutrino flavours to oscillate. 
+Neutrino oscillations is one of the key topics in the field and this thesis. The remainder of this section will discuss the theory of neutrino oscillations. The three flavour states (\nue, \numu, \nutau) have already been established, but with the confirmation of neutrino oscillations, the three corresponding mass states (\nuone, \nutwo, \nuthree) are required to be distinct from the flavour states. The flavour eigenstate of a neutrino is what is observed, however each flavour state is a superposition of the three mass states. As a neutrino propagates, the mass states propagate at different rates and thus the relative phase between the states is continuously changing. When a neutrino then interacts, it will have a certain set of mass states which correspond to a superposition of the flavour states. The flavour superposition will then collapse into a single flavour and this is what is then detected. This is the mechanism which allows neutrino flavours to oscillate. 
 
 The transformation between the flavour and mass states may be expressed as
 \begin{equation}\label{eqn:state transformation}
@@ -246,7 +246,7 @@ and that the transition amplitude is given by
 \begin{equation}
     A_{\nu_\alpha \rightarrow \nu_\beta}(t) = \sum_k, U^*_{\alpha k} U_{\beta k} e^{-iE_kt}
 \end{equation}
-where we have used the fact that $\braket{\nu_j|\nu_k} = \Kronecker_{jk}$ since the mass eigenstates are orthonormal. It then follows that the oscillation probability is given by
+where the fact that $\braket{\nu_j|\nu_k} = \Kronecker_{jk}$ has been used since the mass eigenstates are orthonormal. It then follows that the oscillation probability is given by
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta}(t) = \sum_{k,j} U^*_{\alpha k} U_{\beta k} U_{\alpha j} U^*_{\beta j} e^{-i(E_k-E_j)t}.
 \end{equation}
@@ -353,7 +353,7 @@ with the solution being the Dirac equation given by \cite{Fundamentals_of_Neutri
     (i\gamma^\mu\partial_\mu - m)\psi = 0.
 \end{equation}
 \subsubsection{Dirac Mass}
-Within the \gls{sm} Lagrangian, the Dirac mass term is given by $m_D\Bar{\psi}\psi$ where $\psi$ is the Dirac spinor. By dividing this into left and right components we have 
+Within the \gls{sm} Lagrangian, the Dirac mass term is given by $m_D\Bar{\psi}\psi$ where $\psi$ is the Dirac spinor. By dividing this into left and right components it follows that
 \begin{equation}\label{eqn:Dirac mass term}
 \begin{split}
     m_D\Bar{\psi}\psi &= m_D(\overline{\psi_L + \psi_R})(\psi_L + \psi_R) \\
@@ -382,7 +382,7 @@ Combining this with the mass term in \EquationRef{eqn:SM Lagrangian}, the left h
 where the factor of 1/2 arises due to double counting. As before, in order to get the weak isospin to sum to zero the Higgs field needs to be introduced, but in this case a Higgs triplet (instead of doublet) is required. However, within the \gls{sm}, a Higgs triplet isn't allowed and there doesn't seem to be any experimental evidence for one either \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 \subsubsection{Seesaw mechanism}\label{sec:seesaw_mechanism}
-In the general case, we have four neutrino fields, a left and right handed one plus a charge conjugate version of each. This allows us to create a left and right Majorana mass term akin to \EquationRef{eqn:Majorana mass term} and a regular and charge conjugated Dirac mass akin to \EquationRef{eqn:Dirac mass term} (the Dirac mass, $m_D$ is the same in both cases). The mass component of the Lagrangian, $L_{mass}$, may be written as a matrix equation, 
+In the general case, there are four neutrino fields, a left and right handed one plus a charge conjugate version of each. This allows us to create a left and right Majorana mass term akin to \EquationRef{eqn:Majorana mass term} and a regular and charge conjugated Dirac mass akin to \EquationRef{eqn:Dirac mass term} (the Dirac mass, $m_D$ is the same in both cases). The mass component of the Lagrangian, $L_{mass}$, may be written as a matrix equation, 
 \begin{equation}
     L_{mass} = \frac{1}{2} 
     \begin{pmatrix}
@@ -401,7 +401,7 @@ where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$
     m_2 \simeq m_R.
 \end{split}
 \end{equation}
-Since we have said that $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
+Since $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 
 \subsection{Sterile Neutrino Oscillations}\label{sec:sterile_neutrino_oscillations}
@@ -417,7 +417,7 @@ U_{s1} & U_{s2} & U_{s3} & U_{s4} & \dots \\
 \vdots & \vdots & \vdots & \vdots & \ddots \\
 \end{pmatrix}.
 \end{equation}
-For simplicity, often only the case with one sterile neutrino is considered. This is known as the $(3 + 1)$ neutrino framework where we have the three usual active neutrinos with the addition of one sterile neutrino. Within a $(3 + 1)$ framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
+For simplicity, often only the case with one sterile neutrino is considered. This is known as the $(3 + 1)$ neutrino framework where takes into account the three usual active neutrinos with the addition of one sterile neutrino. Within a $(3 + 1)$ framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
 
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta} = \Kronecker_{\alpha \beta} -4|U_{\alpha \beta}|^2 (\Kronecker_{\alpha \beta} -|U_{\alpha \beta}|^2)sin^2\left(\frac{\Delta m^2_{41}L}{4E} \right),
