--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -4,7 +4,10 @@
 
 %% Acknowledgements
 \begin{acknowledgements}
-  Acknowledgements\dots
+  Acknowledgements\dots \\
+  Costas \\
+  VALOR group as a whole \\
+  Dom \& Ornella for the reco work
 \end{acknowledgements}
 
 %% Abstract
@@ -18,9 +21,16 @@
 \begin{declaration}
   Declaration
   \vspace*{1cm}
-  \begin{flushright}
-    Name??
-  \end{flushright}
+  
+  Chapters 2 - Historical neutrino overview, obviously not my own work. \\
+  Chapter 3 - LArTPC physics and SBN program overview. Small contribution to work on the PDS system, otherwise not my work. \\
+  Chapter 4 - Many people work on Larsoft / Reconstruction. Shower Linear Energy tool originally worked on by Dom. Other two tools developed by me. \\
+  Chapter 5 - \nue event production and selection is work done by Dom (and Gray?), however, the most recent events sample were produced by me using their work. GENIE/miniboone systematics is work done by SOMEONE?. Detector systematics developed by VALOR group. Baseline approximation done by steve/dom. Impact of baseline studies done by me. \\
+  Chapter 6 - VALOR intially develped by Costas et. al. \nue stuff all done by me. Rhiannon did \numu. Impact of detector systematics all done by moi. 
+  
+  %\begin{flushright}
+  %  Name??
+  %\end{flushright}
 \end{declaration}
 
 
