--- a/mythesis.bib
+++ b/mythesis.bib
@@ -142,8 +142,7 @@ publisher = "Columbia University Press"
 }
 
 @book{Introduction_to_Particle_and_Astroparticle_Physics_book,
-author = "{Alessandro De Angelis
-Mário Pimenta}",
+author = "{Alessandro De Angelis, Mário Pimenta}",
 edition = "second",
 title = "{Introduction to Particle and Astroparticle Physics: Multimessenger Astronomy and its Particle Physics Foundations}",
 publisher = "Springer International Publishing AG",
@@ -672,7 +671,7 @@ month = {7}
 
 @book{LArTPC_book,
     author = "Schenk, M.",
-    title = "{Studies with a Liquid Argon Time Projection Chamber: Addressing Technological Challenges of Large-Scale Detectors}",
+    title = "{Studies with a Liquid Argon Time Projection Chamber: Addressing Technological Challenges of Large-Scale Detectors }",
     Publisher = "Springer Specktrum",
     Year = "2015",
     Edition = "1",
