--- a/preamble.tex
+++ b/preamble.tex
@@ -18,6 +18,8 @@
 \usepackage{fullpage}
 \usepackage{lscape}
 \usetikzlibrary{angles, quotes}
+\usepackage{parskip}
+%\usepackage{indentfirst}
 
 \usepackage[a4paper,
             left=30mm,
