--- a/backmatter.tex
+++ b/backmatter.tex
@@ -1,7 +1,8 @@
+\begin{comment}
 \begin{colophon}
   This thesis was made in \LaTeXe{} using the ``hepthesis'' class.
 \end{colophon}
-
+\end{comment}
 %% You're recommended to use the eprint-aware biblio styles which
 %% can be obtained from e.g. www.arxiv.org. The file mythesis.bib
 %% is derived from the source using the SPIRES Bibtex service.
